# hikari

./: ARCHITECTURE.dev  CMakeLists.txt  README.dev
src/: common.hpp  configuration.cpp  configuration.hpp  digest_file_pair.cpp  digest_file_pair.hpp  file_adder.cpp  file_adder.hpp  hikari.hpp  main.cpp  repository.cpp  repository.hpp  runtime_error.hpp  scanner.cpp  scanner.hpp  tag_db.hpp
